# llm-vote-simulation

./: .gitignore  README.md  app.py  debug_test.py  pyproject.toml  requirements.txt
core/: data_processing.py  plotting.py  schemas.py  simulation_logic.py
pages/: 1_Simulation_Configuration.py  2_Simulated_Results.py  3_Data_Comparison.py
