[project]
name = "llm-vote-simulation"
version = "0.1.0"
description = "Digital Twins"
authors = [
    {name = "John Cortés Pozo",email = "stevencortespozo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.46.1,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "openai (>=1.93.0,<2.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "plotly (==5.20.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
